# IT2901---Gruppe-01-P01

./: .gitignore  README.md
STT FKIE/audio-experiments-master/: README.md  runExperiment.sh  stopCentralLogger.sh  sync_audio_samples_to_linphone_vm.sh  sync_config_to_linphone_vm.sh  sync_config_to_radio_emulator_vm.sh
STT FKIE/linphone-adapter-master/code-files/linphone-sdk/mslyra/: AUTHORS  CMakeLists.txt  README  lyra_enc.cc  params.c
STT FKIE/linphone-adapter-master/code-files/linphone-sdk/msmelp/: CMakeLists.txt  readme.md
STT FKIE/linphone-adapter-master/code-files/linphone-sdk/msmelp/libs/melp/: CMakeLists.txt
STT FKIE/linphone-adapter-master/code-files/linphone-sdk/msmelp/libs/melp/include/melp/: melp.h
STT FKIE/linphone-adapter-master/code-files/linphone-sdk/msmelp/sources/: CMakeLists.txt  fifo.h  msmelp.c  params.c  params.h
STT FKIE/linphone-adapter-master/code-files/linphone-sdk/msspeechtext/: CMakeLists.txt  central_logger.h  params.c  params.h  speechtext_dec.cc
STT FKIE/linphone-adapter-master/code-files/linphone-sdk/msspeechtext/mqtttransport/client/: CMakeLists.txt
STT FKIE/linphone-adapter-master/code-files/linphone-sdk/msspeechtext/mqtttransport/client/docs/: DefaultAPI.md
STT FKIE/linphone-adapter-master/code-files/linphone-sdk/msspeechtext/mqtttransport/client/model/: error.c
STT FKIE/linphone-adapter-master/code-files/linphone-sdk/msspeechtext/mqtttransport/client/src/: apiClient.c
STT FKIE/linphone-adapter-master/code-files/linphone-sdk/msspeechtext/mqtttransport/client/unit-test/: test_message.c
STT FKIE/linphone-adapter-master/code-files/linphone-sdk/msspeechtext/mqtttransport/server/: api-server.cpp
STT FKIE/linphone-adapter-master/code-files/linphone-sdk/msspeechtext/mqtttransport/server/.openapi-generator/: FILES
STT FKIE/linphone-adapter-master/code-files/linphone-sdk/msspeechtext/mqtttransport/server/api/: DefaultApi.cpp
STT FKIE/linphone-adapter-master/code-files/linphone-sdk/msspeechtext/mqtttransport/server/impl/: DefaultApiImpl.cpp
STT FKIE/linphone-adapter-master/code-files/linphone-sdk/msspeechtext/mqtttransport/server/include/mqtttransport/: MessageBuffer.h  api-server.h
STT FKIE/linphone-adapter-master/code-files/linphone-sdk/msspeechtext/mqtttransport/server/model/: Error.h  Helpers.cpp  Helpers.h  Message.h
STT FKIE/linphone-adapter-master/code-files/linphone-sdk/msspeechtext/speechtotext/client/api/: DefaultAPI.h
STT FKIE/linphone-adapter-master/code-files/linphone-sdk/msspeechtext/speechtotext/client/docs/: DefaultAPI.md  provide_audio_request.md
STT FKIE/linphone-adapter-master/code-files/linphone-sdk/msspeechtext/speechtotext/client/model/: _on_new_text_post_request.c  error.c  error.h  provide_audio_request.c
STT FKIE/linphone-adapter-master/code-files/linphone-sdk/msspeechtext/speechtotext/client/src/: apiClient.c
STT FKIE/linphone-adapter-master/code-files/linphone-sdk/msspeechtext/speechtotext/client/unit-test/: test__on_new_text_post_request.c
STT FKIE/linphone-adapter-master/code-files/linphone-sdk/msspeechtext/speechtotext/server/: api-server.cpp
STT FKIE/linphone-adapter-master/code-files/linphone-sdk/msspeechtext/speechtotext/server/.openapi-generator/: FILES
STT FKIE/linphone-adapter-master/code-files/linphone-sdk/msspeechtext/speechtotext/server/api/: ApiBase.h  DefaultApi.cpp
STT FKIE/linphone-adapter-master/code-files/linphone-sdk/msspeechtext/speechtotext/server/impl/: DefaultApiImpl.cpp
STT FKIE/linphone-adapter-master/code-files/linphone-sdk/msspeechtext/speechtotext/server/include/speechtotext/: MessageBuffer.h  api-server.h
STT FKIE/linphone-adapter-master/code-files/linphone-sdk/msspeechtext/speechtotext/server/model/: Error.cpp  Error.h  Helpers.cpp  Helpers.h  _on_new_text_post_request.cpp
STT FKIE/linphone-adapter-master/code-files/linphone-sdk/msspeechtext/texttospeech/client/.openapi-generator/: FILES
STT FKIE/linphone-adapter-master/code-files/linphone-sdk/msspeechtext/texttospeech/client/docs/: _on_new_audio_post_request.md
STT FKIE/linphone-adapter-master/code-files/linphone-sdk/msspeechtext/texttospeech/client/model/: _on_new_audio_post_request.c  _on_new_audio_post_request.h
STT FKIE/linphone-adapter-master/code-files/linphone-sdk/msspeechtext/texttospeech/client/unit-test/: test__on_new_audio_post_request.c
STT FKIE/linphone-adapter-master/code-files/linphone-sdk/msspeechtext/texttospeech/server/: README.md  api-server.cpp
STT FKIE/linphone-adapter-master/code-files/linphone-sdk/msspeechtext/texttospeech/server/api/: ApiBase.h  DefaultApi.h
STT FKIE/linphone-adapter-master/code-files/linphone-sdk/msspeechtext/texttospeech/server/impl/: DefaultApiImpl.cpp
STT FKIE/linphone-adapter-master/code-files/linphone-sdk/msspeechtext/texttospeech/server/include/texttospeech/: MessageBuffer.h  api-server.h
STT FKIE/linphone-adapter-master/code-files/linphone-sdk/msspeechtext/texttospeech/server/model/: Helpers.cpp  Provide_text_request.cpp  Provide_text_request.h  _on_new_audio_post_request.h
STTE/linphone-adapter-master/code-files/linphone-sdk/msmelpwb/: CMakeLists.txt  readme.md
STTE/linphone-adapter-master/code-files/linphone-sdk/msmelpwb/libs/melpwb/: CMakeLists.txt
STTE/linphone-adapter-master/code-files/linphone-sdk/msmelpwb/libs/melpwb/include/melpwb/: melpwb.h
STTE/linphone-adapter-master/code-files/linphone-sdk/msmelpwb/resources/: libmsmelpwb.conf
STTE/linphone-adapter-master/code-files/linphone-sdk/msmelpwb/sources/: CMakeLists.txt  params.h
STTE/linphone-adapter-master/code-files/linphone-sdk/msspeechtext/texttospeech/server/: CMakeLists.txt
STTE/linphone-adapter-master/code-files/linphone-sdk/msspeechtext/texttospeech/server/.openapi-generator/: FILES
STTE/linphone-adapter-master/code-files/linphone-sdk/msspeechtext/texttospeech/server/api/: DefaultApi.cpp
STTE/linphone-adapter-master/code-files/linphone-sdk/msspeechtext/texttospeech/server/impl/: DefaultApiImpl.h
STTE/linphone-adapter-master/code-files/linphone-sdk/msspeechtext/texttospeech/server/model/: Error.cpp  Error.h  Helpers.h  _on_new_audio_post_request.cpp
(+2312 files in other folders)
